<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="io_mapping" Id="{87c33c1f-405d-4536-940a-0d0026912d98}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM io_mapping
VAR PERSISTENT
    //Example analog input function block
    cpt_3144 : analog_scaling;
	
	test_real AT %Q* : REAL;
	
    //Example Analog input raw input, mapped to a physical input
    cpt_3144_raw_input AT %I* : INT;

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Instantiate Example analog input function block
cpt_3144();

//Map values from the OPC GVL so that they can be written to from outside POU(IE from HMI)
cpt_3144.eu_max:=opc.popa_0081_cpt_3144_eu_max;
cpt_3144.eu_min:=opc.popa_0081_cpt_3144_eu_min;
cpt_3144.filter_factor:=opc.popa_0081_cpt_3144_filter_factor;
cpt_3144.raw_max:=opc.popa_0081_cpt_3144_raw_max;
cpt_3144.raw_min:=opc.popa_0081_cpt_3144_raw_min;
//Map the analog scaling function block raw input to the physical raw input variable
cpt_3144.raw_input := cpt_3144_raw_input;

]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>