<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="opc_mapping" Id="{b22e9f76-7f94-4083-919c-cee7ef2d7e82}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM opc_mapping
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//This program maps values from the local variable to the OPC readable tag.
//Setpoints should NOT be mapped here.  The OPC tag should be used directly where needed
opc.popa_0081_cpt_3144_low_low_active:=faults.cpt_3144_low_low.active;
opc.popa_0081_cpt_3144_low_active:=faults.cpt_3144_low.active;
opc.popa_0081_cpt_3144_high_active:=faults.cpt_3144_high.active;
opc.popa_0081_cpt_3144_high_high_active:=faults.cpt_3144_high_high.active;
opc.popa_0081_system_date_time_year:=general.system_date_time.year;
opc.popa_0081_system_date_time_month:=general.system_date_time.month;
opc.popa_0081_system_date_time_day:=general.system_date_time.day;
opc.popa_0081_system_date_time_hour:=general.system_date_time.hour;
opc.popa_0081_system_date_time_minute:=general.system_date_time.minute;
opc.popa_0081_system_date_time_second:=general.system_date_time.second;
//opc.popa_0081_cpt_3144_scaled_value:=io_mapping.cpt_3144.scaled_value;
]]></ST>
    </Implementation>
    <LineIds Name="opc_mapping">
      <LineId Id="3" Count="12" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>